sanger/sites/metabase/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase
spec:
  selector:
    matchLabels:
      app: metabase
  replicas: 1
  template:
    metadata:
      name: metabase
      labels:
        app: metabase
    spec:
      volumes:
        - name: metabase-db
          persistentVolumeClaim:
            claimName: metabase-pvc
      containers:
      - image: metabase/metabase
        imagePullPolicy: IfNotPresent
        name: metabase
        ports:
        - containerPort: 3000
          hostPort: 9698
          name: metabase
        volumeMounts:
        - name: metabase-db
          mountPath: /metabase.db
        resources:
          requests:
            memory: "512M"
            cpu: 1
          limits:
            memory: "8Gi"
            cpu: 4
