sanger/sites/metabase/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase
  labels:
    app: metabase
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: metabase
  selector:
    app: metabase
